--- a/src/index.css
+++ b/src/index.css
@@ -66,9 +66,12 @@ h1 {
 }
 
 button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    border-radius: 5px;
+    border: 1px solid #656565;
+    width: 60px;
+    height: 36px;
+    margin: 12px 0px;
+    padding: 0.2em 0.4em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
@@ -76,9 +79,7 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
-button:hover {
-    border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
@@ -100,5 +101,5 @@ button:focus-visible {
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    max-width: 1200px;
 }
