--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,8 @@ body {
     color: black;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
@@ -102,4 +102,5 @@ main {
     display: flex;
     flex-direction: column;
     max-width: 1200px;
+    margin-left: 24px;
 }
